# news-scraper

./: .gitignore  EXAMPLE_FINANCE.md  EXAMPLE_WORKFLOW.md  README.md  STATUS.md  pyproject.toml
configs/: README.md
docs/: BASE_SCRAPER_MIGRATION.md  CLI_EXAMPLES.sh  CLI_GUIDE.md  CLI_REVIEW.md  COMPLETE_WORKFLOW.md  DEDUPLICATION.md  HISTORICAL.md  PRIORITY_SOURCES.md  PROFESSIONAL_ARCHITECTURE.md  PROFESSIONAL_SCRAPING.md  PROXIES.md  REORGANIZATION_SUMMARY.md  SCRAPERS.md  SOURCES_ORGANIZATION.md  SPECIALIZED_SCRAPERS.md  TEST_COVERAGE.md  TIPS.md  YAHOO_FINANCE.md
scripts/: debug_metadata.py  demo_all_sources.py  demo_infomoney.py  exemplo_proxies.py  exemplo_todas_fontes.py  investigate_site.py  test_financial_scraping.sh  test_proxies.py  test_smart_proxies.py
src/news_scraper/: __init__.py  bloomberg_scraper.py  browser.py  browser.py.bak2  cli.py  dataset.py  einvestidor_scraper.py  extract.py  extractors.py  global_sources.py  historical.py  infomoney_scraper.py  io.py  moneytimes_scraper.py  polite.py  query.py  (+10 more)
tests/: test_all_scrapers.py  test_base_scraper_features.py  test_bloomberg_scraper.py  test_cli_coverage.py  test_cli_parametrization.py  test_cli_smoke.py  test_dataset_parquet.py  test_einvestidor_scraper.py  test_extract_fallback.py  test_extractors.py  test_global_sources.py  test_historical.py  test_infomoney_scraper.py  test_io.py  test_moneytimes_scraper.py  test_priority_sources_quality.py  test_query.py  test_reuters_scraper.py  test_scraper_benchmarks.py  test_smoke.py  test_sources_cli.py  test_sources_csv.py  test_valor_scraper.py
(+24 files in other folders)
